--- a/index.html
+++ b/index.html
@@ -1945,6 +1945,29 @@
   /* Weather widget hard override (keep compact) */
   #weatherWidget{ right:auto !important; bottom:auto !important; inset:auto !important; }
 
+
+/* ── OVERRIDES (layout fixes) ───────────────────────────── */
+#sosFab{
+  position: fixed !important;
+  top: calc(14px + env(safe-area-inset-top,0px)) !important;
+  left: calc(14px + env(safe-area-inset-left,0px)) !important;
+  z-index: 920 !important;
+}
+#weatherWidget{
+  position: fixed !important;
+  top: calc(14px + env(safe-area-inset-top,0px) + 54px) !important; /* debajo del SOS */
+  left: calc(14px + env(safe-area-inset-left,0px)) !important;
+  z-index: 910 !important;
+}
+#btnCenter{
+  top: 50% !important;
+  bottom: auto !important;
+  transform: translateY(-50%) !important;
+}
+#btnCenter:active{
+  transform: translateY(-50%) scale(.92) !important;
+}
+
 </style>
 
 <style id="fmHudCompactStyles">
