--- a/index.html
+++ b/index.html
@@ -2046,6 +2046,7 @@
 
 /* Drive hours: grow when driving starts + blink near limit */
 #driveHoursWidget.boost{ transform: scale(1.25) !important; opacity:1 !important; }
+#driveHoursWidget.driving-active{ transform: scale(1.35) !important; opacity:1 !important; }
 #driveHoursWidget{ transition: transform .18s cubic-bezier(.34,1.56,.64,1), opacity .18s; transform-origin: left top; }
 #driveHoursWidget.blink{ animation: dhBlink 1s infinite; }
 @keyframes dhBlink{ 0%,100%{ filter:none; } 50%{ filter: drop-shadow(0 0 10px rgba(239,68,68,.7)); } }
@@ -2075,6 +2076,15 @@
 }
 #btnCenter:active{
   transform: translateY(-50%) scale(.92) !important;
+}
+#btnMapColor{
+  top: calc(50% + 60px) !important;
+  bottom: auto !important;
+  transform: none !important;
+  right: calc(14px + env(safe-area-inset-right,0px)) !important;
+}
+#btnMapColor:active{
+  transform: scale(.92) !important;
 }
 
 </style>
@@ -2864,6 +2874,9 @@
 
   <!-- CENTER ON MY LOCATION -->
   <button id="btnCenter" class="map-fab" title="Centralizar">🎯</button>
+
+  <!-- CHANGE MAP COLOR -->
+  <button id="btnMapColor" class="map-fab" title="Cambiar color del mapa" onclick="cycleMapColor()">🎨</button>
 
   <!-- NEXT TURN / EXIT INSTRUCTION -->
   <div id="navNext" class="nav-next" style="display:none">🧭</div>
@@ -3681,7 +3694,7 @@ function triggerFatigueAlert() {
   if (navigator.vibrate) navigator.vibrate([500,200,500,200,500,200,800]);
   document.getElementById('fatigueAlert').classList.add('show');
   // Also show on map HUD
-  showToast('danger','😴','⚠️ FATIGUE ALERT','Eyes closed too long — Pull over immediately!', 0);
+  showToast('danger','😴','⚠️ FATIGUE ALERT','Eyes closed too long — Pull over immediately!', 45000);
 }
 
 function dismissFatigueAlert() {
@@ -3776,7 +3789,7 @@ function updateWeatherWidget(wx) {
 
   if (isDanger) {
     showToast('danger','⛈️','⚠️ DANGEROUS WEATHER',
-      `${wx.desc} — ${wx.temp}°F, winds ${wx.wind}mph. Consider pulling over.`, 0);
+      `${wx.desc} — ${wx.temp}°F, winds ${wx.wind}mph. Consider pulling over.`, 45000);
     flashDanger(3000);
     if (navigator.vibrate) navigator.vibrate([300,100,300,100,300]);
     // Also show full-screen
@@ -3978,7 +3991,7 @@ async function checkBridges() {
 
     if (margin < 0) {
       showToast('danger', '🚨', '⚠️ PUENTE MUY BAJO EN TU RUTA!',
-        `${lowest.name}: ${clearance}ft — Tu tráiler: ${needed}ft. ¡DESVÍATE AHORA!`, 0);
+        `${lowest.name}: ${clearance}ft — Tu tráiler: ${needed}ft. ¡DESVÍATE AHORA!`, 45000);
       flashDanger(4000);
       if (navigator.vibrate) navigator.vibrate([400, 100, 400, 100, 800]);
       document.getElementById('bridgeNextTxt').textContent = `🚨 MUY BAJO: ${clearance}ft @ ${lowest.name}`;
@@ -4181,13 +4194,11 @@ function updateSpeedometer(mph) {
   const spw = document.getElementById('speedometerWidget');
   if (spw) spw.classList.toggle('over-limit', !!over);
 
-  // Drive-hours widget boost when you start moving
-  if (moving && !wasMoving) {
-    const dhw = document.getElementById('driveHoursWidget');
-    if (dhw) {
-      dhw.classList.add('boost');
-      setTimeout(() => dhw.classList.remove('boost'), 1200);
-    }
+  // Drive-hours widget: scale up when driving, scale down when stopped
+  const dhwSpd = document.getElementById('driveHoursWidget');
+  if (dhwSpd && moving && !wasMoving) {
+    dhwSpd.classList.add('boost');
+    setTimeout(() => dhwSpd.classList.remove('boost'), 1200);
   }
   wasMoving = moving;
 if (moving) {
@@ -4771,6 +4782,35 @@ function changeMapStyle(styleKey) {
 function toggleMapStylePanel() {
   const panel = document.getElementById('mapStylePanel');
   if (panel) panel.classList.toggle('visible');
+}
+
+// Cycle through map color themes quickly
+const MAP_COLOR_THEMES = [
+  { label:'Normal',   filter:'none' },
+  { label:'Oscuro',   filter:'invert(1) hue-rotate(180deg)' },
+  { label:'Noche',    filter:'invert(1) hue-rotate(200deg) saturate(0.8)' },
+  { label:'Retro',    filter:'sepia(0.6) hue-rotate(10deg) saturate(1.2)' },
+  { label:'Alto Contraste', filter:'contrast(1.5) saturate(1.3)' },
+];
+let mapColorIdx = 0;
+function cycleMapColor() {
+  mapColorIdx = (mapColorIdx + 1) % MAP_COLOR_THEMES.length;
+  const theme = MAP_COLOR_THEMES[mapColorIdx];
+  const mapEl = document.getElementById('fullMap');
+  if (mapEl) mapEl.style.filter = theme.filter;
+  const btn = document.getElementById('btnMapColor');
+  if (btn) {
+    btn.title = theme.label;
+    // Brief label flash
+    btn.textContent = '';
+    const span = document.createElement('span');
+    span.style.cssText = 'font-size:9px;font-weight:900;letter-spacing:-0.5px';
+    span.textContent = theme.label.toUpperCase().substring(0,5);
+    btn.appendChild(span);
+    clearTimeout(btn._rt);
+    btn._rt = setTimeout(() => { btn.innerHTML = '🎨'; }, 1200);
+  }
+  showToast('info','🎨','Mapa', theme.label, 2000);
 }
 
 function applyTheme() {
@@ -6355,7 +6395,10 @@ async function fmStartTracking() {
   document.getElementById('fmStopBtn').style.display = 'block';
   showSpeedometer();
   showDriveHoursWidget();
-  updateDriveHoursWidget(11, 11); // initialize at full
+  // Use available cycle hours (max 11 per day, but limited by 70hr cycle)
+  const initCycleHours = Math.max(0, parseFloat(document.getElementById('hoursInput').value) || 70);
+  const initDriveMax = Math.min(11, initCycleHours);
+  updateDriveHoursWidget(initDriveMax, initDriveMax);
   document.getElementById('reportFab').classList.add('visible');
   const trb = document.getElementById('topReportBtns');
   if (trb) trb.style.display = 'flex';
@@ -6437,21 +6480,48 @@ async function fmStartTracking() {
     document.getElementById('fmEta').textContent = fmtH(etaH);
     document.getElementById('fmRem').textContent = remaining.toFixed(1) + ' mi';
 
-    const driveLeft = Math.max(0, 11 - elapsed);
+    const driveMax = Math.min(11, Math.max(0, parseFloat(document.getElementById('hoursInput').value) || 70));
+    const driveLeft = Math.max(0, driveMax - elapsed);
     const driveEl = document.getElementById('fmDriveLeft');
     driveEl.textContent = fmtH(driveLeft);
     driveEl.style.color = driveLeft < 2 ? '#ef4444' : driveLeft < 4 ? '#f59e0b' : '#10b981';
     // Update circular widget on the map
-    updateDriveHoursWidget(driveLeft, 11);
+    updateDriveHoursWidget(driveLeft, driveMax);
     
     // Blink drive-hours widget when approaching the daily limit
     const dhw = document.getElementById('driveHoursWidget');
-    if (dhw) dhw.classList.toggle('blink', driveLeft <= 1.0);
+    if (dhw) {
+      dhw.classList.toggle('blink', driveLeft <= 2.0);
+      dhw.classList.toggle('driving-active', isMoving);
+    }
+// ✅ Alert when less than 2 hours remaining
+    try {
+      const warnKey2h = 'hos_drive_warn_2h_' + new Date().toDateString();
+      if (driveLeft <= 2.0 && driveLeft > 0 && !localStorage.getItem(warnKey2h)) {
+        localStorage.setItem(warnKey2h, '1');
+        showToast('danger','⚠️',
+          lang==='es' ? '¡MENOS DE 2 HORAS!' : '⚠️ LESS THAN 2 HRS!',
+          lang==='es' ? `Solo te quedan ${fmtH(driveLeft)} de manejo. Busca un lugar para descansar.`
+                      : `Only ${fmtH(driveLeft)} of driving left. Find a rest area.`,
+          12000
+        );
+      }
+      const warnKey1h = 'hos_drive_warn_1h_' + new Date().toDateString();
+      if (driveLeft <= 1.0 && driveLeft > 0 && !localStorage.getItem(warnKey1h)) {
+        localStorage.setItem(warnKey1h, '1');
+        showToast('danger','🚨',
+          lang==='es' ? '¡1 HORA DE MANEJO!' : '🚨 1 HR OF DRIVING LEFT!',
+          lang==='es' ? `¡Solo ${fmtH(driveLeft)}! Detente a descansar pronto.`
+                      : `Only ${fmtH(driveLeft)} left! Stop and rest soon.`,
+          20000
+        );
+      }
+    } catch(e) {}
 // ✅ Daily driving-hours notice (shows only what you can still drive today)
     try {
       const todayKey = new Date().toDateString();
       const warnedKey = localStorage.getItem('hos_drive_warn_day');
-      if (driveLeft < 11 && warnedKey !== todayKey) {
+      if (driveLeft < driveMax && warnedKey !== todayKey) {
         showToast(
           'info',
           '⏱️',
